tests/ui/generics_with_const_generics.stderr
error[E0277]: the trait bound `MyStructBuilder<'_, '_, '_, {_: usize}, {_: bool}, false, false, String>: HasReq1` is not satisfied
  --> tests/ui/generics_with_const_generics.rs:19:10
   |
19 |         .build();
   |          ^^^^^ the trait `HasReq1` is not implemented for `MyStructBuilder<'_, '_, '_, {_: usize}, {_: bool}, false, false, String>`
   |
   = help: the trait `HasReq1` is implemented for `MyStructBuilder<'a, 'b, 'c, N, FLG, true, P1, T>`
note: required by a bound in `MyStructBuilder::<'a, 'b, 'c, N, FLG, P0, P1, T>::build`
  --> tests/ui/generics_with_const_generics.rs:1:10
   |
1  | #[derive(tidy_builder::Builder)]
   |          ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MyStructBuilder::<'a, 'b, 'c, N, FLG, P0, P1, T>::build`
   = note: this error originates in the derive macro `tidy_builder::Builder` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyStructBuilder<'_, '_, '_, {_: usize}, {_: bool}, false, false, String>: HasReq2` is not satisfied
  --> tests/ui/generics_with_const_generics.rs:19:10
   |
19 |         .build();
   |          ^^^^^ the trait `HasReq2` is not implemented for `MyStructBuilder<'_, '_, '_, {_: usize}, {_: bool}, false, false, String>`
   |
   = help: the trait `HasReq2` is implemented for `MyStructBuilder<'a, 'b, 'c, N, FLG, P0, true, T>`
note: required by a bound in `MyStructBuilder::<'a, 'b, 'c, N, FLG, P0, P1, T>::build`
  --> tests/ui/generics_with_const_generics.rs:1:10
   |
1  | #[derive(tidy_builder::Builder)]
   |          ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MyStructBuilder::<'a, 'b, 'c, N, FLG, P0, P1, T>::build`
   = note: this error originates in the derive macro `tidy_builder::Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
